// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputPassword should render properly displaying the password requirements 1`] = `
[
  <View
    style={
      {
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        {
          "height": "auto",
        }
      }
    >
      <TextInput
        autoCapitalize="none"
        color="rgba(255,255,255,1.00)"
        focusable={true}
        fontSize={20}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        outlineWidth={0}
        placeholder="Password"
        placeholderTextColor="rgba(255,255,255,0.60)"
        secureTextEntry={true}
        selectionColor="black"
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
    <View
      style={
        {
          "position": "absolute",
          "right": 10,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        selectable={false}
        style={
          [
            {
              "color": "light",
              "fontSize": 24,
            },
            undefined,
            {
              "fontFamily": "FontAwesome",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>,
  <span
    fontFamily="System"
    suppressHighlighting={true}
  >
    password_requirements:must_include
  </span>,
  <View>
    <View
      testID="password_requirements:at_least_characters"
    >
      <View>
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "rgba(255, 255, 255, 0.6)",
                "fontSize": 16,
              },
              undefined,
              {
                "fontFamily": "Feather",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
      <span
        fontFamily="System"
        suppressHighlighting={true}
      >
        password_requirements:at_least_characters
      </span>
    </View>
    <View
      testID="password_requirements:no_blank_spaces"
    >
      <View>
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "rgba(255, 255, 255, 0.6)",
                "fontSize": 16,
              },
              undefined,
              {
                "fontFamily": "Feather",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
      <span
        fontFamily="System"
        suppressHighlighting={true}
      >
        password_requirements:no_blank_spaces
      </span>
    </View>
    <View
      testID="password_requirements:no_special_characters"
    >
      <View>
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "rgba(255, 255, 255, 0.6)",
                "fontSize": 16,
              },
              undefined,
              {
                "fontFamily": "Feather",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
      <span
        fontFamily="System"
        suppressHighlighting={true}
      >
        password_requirements:no_special_characters
      </span>
    </View>
    <View
      testID="password_requirements:at_least_capital_letter"
    >
      <View>
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "rgba(255, 255, 255, 0.6)",
                "fontSize": 16,
              },
              undefined,
              {
                "fontFamily": "Feather",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
      <span
        fontFamily="System"
        suppressHighlighting={true}
      >
        password_requirements:at_least_capital_letter
      </span>
    </View>
  </View>,
]
`;

exports[`InputPassword should render properly without displaying the password requirements 1`] = `
<View
  style={
    {
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      {
        "height": "auto",
      }
    }
  >
    <TextInput
      autoCapitalize="none"
      color="rgba(255,255,255,1.00)"
      focusable={true}
      fontSize={20}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      outlineWidth={0}
      placeholder="Password"
      placeholderTextColor="rgba(255,255,255,0.60)"
      secureTextEntry={true}
      selectionColor="black"
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      {
        "position": "absolute",
        "right": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      selectable={false}
      style={
        [
          {
            "color": "light",
            "fontSize": 24,
          },
          undefined,
          {
            "fontFamily": "FontAwesome",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;
